--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
       {
         "nested-interactive": "off"
       }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
     ]
   }
 }
